--- a/index.html
+++ b/index.html
@@ -111,6 +111,146 @@
         </div>
     </div>
 
+    <div class="container-fluid d-flex justify-content-center border-top border-bottom border-danger rounded">
+        <div class="row">
+            <div class="spinner-border text-primary"></div>
+            <div class="spinner-border text-secondary"></div>
+            <div class="spinner-border text-warning"></div>
+            <div class="spinner-border text-info"></div>
+            <div class="spinner-border text-dark"></div>
+            <div class="spinner-border text-primary"></div>
+            <div class="spinner-border text-primary"></div>
+            <div class="spinner-border text-primary"></div>
+        </div>
+        <div class="row">
+            <div class="spinner-grow text-primary"></div>
+            <div class="spinner-grow text-secondary"></div>
+            <div class="spinner-grow text-warning"></div>
+            <div class="spinner-grow text-info"></div>
+            <div class="spinner-grow text-dark"></div>
+            <div class="spinner-grow text-primary"></div>
+            <div class="spinner-grow text-primary"></div>
+            <div class="spinner-grow text-primary"></div>
+        </div>
+        <div class="bg-success rounded-circle" style="width: 45px; height: 35px;"></div>
+        <div class="bg-success rounded-pill text-center" style="width: 100px; height: 35px;">button</div>
+
+    </div>
+
+
+
+    <div class="container-md">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+            <div class="col">
+                <div class="card rounded">
+                    <div class="card-header text-light bg-dark">Блюдо</div>
+                    <img src="img/pic2.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title text-center">Potato Chips</h4>
+                        <p class="card-subtitle text-center text-muted ">536cal/100g</p>
+                        <p class="card-subtitle text-muted font-weight-bold">History</p>
+                        <p class="card-text text-center">The potato chip was invented in 1853 by George Crum. ... Crum
+                            finally made
+                            fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
+                            The customer,
+                            surprisingly enough, was happy – and potato chips were invented!</p>
+                        <button class="btn btn-warning">Ingedients</button>
+                    </div>
+                    <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card rounded">
+                    <div class="card-header text-light bg-dark">Блюдо</div>
+                    <img src="img/pic2.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title text-center">Potato Chips</h4>
+                        <p class="card-subtitle text-center text-muted ">536cal/100g</p>
+                        <p class="card-subtitle text-muted font-weight-bold">History</p>
+                        <p class="card-text text-center">The potato chip was invented in 1853 by George Crum. ... Crum
+                            finally made
+                            fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
+                            The customer,
+                            surprisingly enough, was happy – and potato chips were invented!</p>
+                        <button class="btn btn-warning">Ingedients</button>
+                    </div>
+                    <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card rounded">
+                    <div class="card-header text-light bg-dark">Блюдо</div>
+                    <img src="img/pic2.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title text-center">Potato Chips</h4>
+                        <p class="card-subtitle text-center text-muted ">536cal/100g</p>
+                        <p class="card-subtitle text-muted font-weight-bold">History</p>
+                        <p class="card-text text-center">The potato chip was invented in 1853 by George Crum. ... Crum
+                            finally made
+                            fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
+                            The customer,
+                            surprisingly enough, was happy – and potato chips were invented!</p>
+                        <button class="btn btn-warning">Ingedients</button>
+                    </div>
+                    <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card rounded">
+                    <div class="card-header text-light bg-dark">Блюдо</div>
+                    <img src="img/pic2.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title text-center">Potato Chips</h4>
+                        <p class="card-subtitle text-center text-muted ">536cal/100g</p>
+                        <p class="card-subtitle text-muted font-weight-bold">History</p>
+                        <p class="card-text text-center">The potato chip was invented in 1853 by George Crum. ... Crum
+                            finally made
+                            fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
+                            The customer,
+                            surprisingly enough, was happy – and potato chips were invented!</p>
+                        <button class="btn btn-warning">Ingedients</button>
+                    </div>
+                    <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card rounded">
+                    <div class="card-header text-light bg-dark">Блюдо</div>
+                    <img src="img/pic2.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title text-center">Potato Chips</h4>
+                        <p class="card-subtitle text-center text-muted ">536cal/100g</p>
+                        <p class="card-subtitle text-muted font-weight-bold">History</p>
+                        <p class="card-text text-center">The potato chip was invented in 1853 by George Crum. ... Crum
+                            finally made
+                            fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
+                            The customer,
+                            surprisingly enough, was happy – and potato chips were invented!</p>
+                        <button class="btn btn-warning">Ingedients</button>
+                    </div>
+                    <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card rounded">
+                    <div class="card-header text-light bg-dark">Блюдо</div>
+                    <img src="img/pic2.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title text-center">Potato Chips</h4>
+                        <p class="card-subtitle text-center text-muted ">536cal/100g</p>
+                        <p class="card-subtitle text-muted font-weight-bold">History</p>
+                        <p class="card-text text-center">The potato chip was invented in 1853 by George Crum. ... Crum
+                            finally made
+                            fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
+                            The customer,
+                            surprisingly enough, was happy – and potato chips were invented!</p>
+                        <button class="btn btn-warning">Ingedients</button>
+                    </div>
+                    <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
