--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="container-md">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
             <div class="col">
-                <div class="card rounded">
+                <div class="card">
                     <div class="card-header text-light bg-dark">Блюдо</div>
                     <img src="img/pic2.jpg" class="card-img-top" alt="">
                     <div class="card-body">
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card rounded">
+                <div class="card">
                     <div class="card-header text-light bg-dark">Блюдо</div>
                     <img src="img/pic2.jpg" class="card-img-top" alt="">
                     <div class="card-body">
@@ -178,7 +178,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card rounded">
+                <div class="card">
                     <div class="card-header text-light bg-dark">Блюдо</div>
                     <img src="img/pic2.jpg" class="card-img-top" alt="">
                     <div class="card-body">
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card rounded">
+                <div class="card">
                     <div class="card-header text-light bg-dark">Блюдо</div>
                     <img src="img/pic2.jpg" class="card-img-top" alt="">
                     <div class="card-body">
@@ -214,7 +214,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card rounded">
+                <div class="card">
                     <div class="card-header text-light bg-dark">Блюдо</div>
                     <img src="img/pic2.jpg" class="card-img-top" alt="">
                     <div class="card-body">
@@ -232,7 +232,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card rounded">
+                <div class="card">
                     <div class="card-header text-light bg-dark">Блюдо</div>
                     <img src="img/pic2.jpg" class="card-img-top" alt="">
                     <div class="card-body">
