--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MyCoolWebsite</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -41,6 +41,8 @@
         .bg-{color}  - установка background-color
         .text-{color} - установка color
      -->
+
+
 
 
 
@@ -137,8 +139,6 @@
 
     </div>
 
-
-
     <div class="container-md">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
             <div class="col">
@@ -154,7 +154,12 @@
                             fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
                             The customer,
                             surprisingly enough, was happy – and potato chips were invented!</p>
-                        <button class="btn btn-warning">Ingedients</button>
+                        <button class="btn btn-warning" data-toggle="collapse" data-target="#txt1" aria-expanded="false"
+                            aria-controls="txt1">Ingedients</button>
+                        <p class="collapse" id="txt1">
+                            * 4 medium potatoes, peeled and sliced paper-thin <br>
+                            * 3 tablespoons salt <br>
+                            * 1 quart oil for deep frying</p>
                     </div>
                     <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
                 </div>
@@ -162,17 +167,38 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header text-light bg-dark">Блюдо</div>
-                    <img src="img/pic2.jpg" class="card-img-top" alt="">
+                    <img src="img/pic6.jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h4 class="card-title text-center">Potato Chips</h4>
-                        <p class="card-subtitle text-center text-muted ">536cal/100g</p>
+                        <h4 class="card-title text-center">Пельмени</h4>
+                        <p class="card-subtitle text-center text-muted ">much cal/100g</p>
                         <p class="card-subtitle text-muted font-weight-bold">History</p>
                         <p class="card-text text-center">The potato chip was invented in 1853 by George Crum. ... Crum
                             finally made
                             fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
                             The customer,
                             surprisingly enough, was happy – and potato chips were invented!</p>
-                        <button class="btn btn-warning">Ingedients</button>
+                        <button class="btn btn-warning" aria-expanded="false" aria-controls="txt2" data-toggle="collapse" data-target="#txt2">Ingedients</button>
+                        <p class="collapse" id="txt2">
+                            Мука пшеничная просеянная - 500 г + для работы с тестом
+                            Вода горячая (70-75 градусов) - 250 мл
+                            Яйцо (небольшое) - 1 шт.
+                            Соль - 1 ч. ложка без горки
+                            Масло растительное без запаха - 25 мл
+                            <br> <br>
+                            Для начинки:
+                            Мясо (говядина и свинина) - 550 г
+                            Лук репчатый - 200 г
+                            Сало (по желанию, если мясо постное) - 30 г
+                            Вода - 70-80 г (по консистенции фарша)
+                            Соль - 1 ч. ложка без горки
+                            Перец чёрный молотый - по вкусу
+                            <br> <br>
+                            Для варки:
+                            Лист лавровый - по вкусу
+                            Соль - по вкусу
+                            Перец чёрный горошком - по вкусу
+                            Лук репчатый - 1/4 шт.
+                        </p>
                     </div>
                     <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
                 </div>
@@ -180,17 +206,29 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header text-light bg-dark">Блюдо</div>
-                    <img src="img/pic2.jpg" class="card-img-top" alt="">
+                    <img src="img/pic3.jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h4 class="card-title text-center">Potato Chips</h4>
-                        <p class="card-subtitle text-center text-muted ">536cal/100g</p>
+                        <h4 class="card-title text-center">Pizza</h4>
+                        <p class="card-subtitle text-center text-muted ">much cal/100g</p>
                         <p class="card-subtitle text-muted font-weight-bold">History</p>
                         <p class="card-text text-center">The potato chip was invented in 1853 by George Crum. ... Crum
                             finally made
                             fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
                             The customer,
                             surprisingly enough, was happy – and potato chips were invented!</p>
-                        <button class="btn btn-warning">Ingedients</button>
+                        <button class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" data-html="true" title="
+                        Для теста:
+                        Яйцо - 1 шт.
+                        Мука - 2-3 стакана
+                        Масло растительное - 2 ст. л.
+                        Вода - 200 мл
+                        Соль - 1 ч. л.
+                        Сахар - 1 ст. л.
+                        *
+                        Для начинки:
+                        Сыр моцарелла - 300 г
+                        Сыр твердый - 200 г
+                        ">Ingedients</button>
                     </div>
                     <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
                 </div>
@@ -198,17 +236,30 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header text-light bg-dark">Блюдо</div>
-                    <img src="img/pic2.jpg" class="card-img-top" alt="">
+                    <img src="img/pic1.jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h4 class="card-title text-center">Potato Chips</h4>
-                        <p class="card-subtitle text-center text-muted ">536cal/100g</p>
+                        <h4 class="card-title text-center">Chicken Burger</h4>
+                        <p class="card-subtitle text-center text-muted ">much cal/100g</p>
                         <p class="card-subtitle text-muted font-weight-bold">History</p>
                         <p class="card-text text-center">The potato chip was invented in 1853 by George Crum. ... Crum
                             finally made
                             fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
                             The customer,
                             surprisingly enough, was happy – and potato chips were invented!</p>
-                        <button class="btn btn-warning">Ingedients</button>
+                        <button class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" data-html="true" title="
+                        500 гр куриного фарша;
+                        1 картофелина
+                        1 луковица
+                        0,5 ст.л соли
+                        по вкусу зелень, приправы
+                        панировочные сухари
+                        3 яйца
+                        Булочки для бургеров
+                        Салат, овощи
+                        Ломтики плавленного сыра
+                        Растительное масло
+                        Майонез, Кетчуп, либо другой соус
+                        ">Ingedients</button>
                     </div>
                     <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
                 </div>
@@ -216,17 +267,20 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header text-light bg-dark">Блюдо</div>
-                    <img src="img/pic2.jpg" class="card-img-top" alt="">
+                    <img src="img/pic5.jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h4 class="card-title text-center">Potato Chips</h4>
-                        <p class="card-subtitle text-center text-muted ">536cal/100g</p>
+                        <h4 class="card-title text-center">яичница</h4>
+                        <p class="card-subtitle text-center text-muted ">much cal/100g</p>
                         <p class="card-subtitle text-muted font-weight-bold">History</p>
                         <p class="card-text text-center">The potato chip was invented in 1853 by George Crum. ... Crum
                             finally made
                             fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
                             The customer,
                             surprisingly enough, was happy – and potato chips were invented!</p>
-                        <button class="btn btn-warning">Ingedients</button>
+                        <button class="btn btn-warning" title="Ingredients" data-toggle="popover" data-placement="bottom" data-content="Яйца - 24 шт. (по 3 на человека)
+                        Сливочное масло - 80 г + 80 г
+                        Соль
+                        Перец">Ingedients</button>
                     </div>
                     <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
                 </div>
@@ -234,23 +288,64 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header text-light bg-dark">Блюдо</div>
-                    <img src="img/pic2.jpg" class="card-img-top" alt="">
+                    <img src="img/pic4.jpg" class="card-img-top" alt="">
                     <div class="card-body">
-                        <h4 class="card-title text-center">Potato Chips</h4>
-                        <p class="card-subtitle text-center text-muted ">536cal/100g</p>
+                        <h4 class="card-title text-center">Чебуреки</h4>
+                        <p class="card-subtitle text-center text-muted ">much cal/100g</p>
                         <p class="card-subtitle text-muted font-weight-bold">History</p>
                         <p class="card-text text-center">The potato chip was invented in 1853 by George Crum. ... Crum
                             finally made
                             fries that were too thin to eat with a fork, hoping to annoy the extremely fussy customer.
                             The customer,
                             surprisingly enough, was happy – and potato chips were invented!</p>
-                        <button class="btn btn-warning">Ingedients</button>
+                        <button class="btn btn-warning" data-toggle="popover" data-placement="bottom" title="Ingredients" data-content="Яйца – 3 шт.
+                        Вода – 500 мл
+                        Мука – 180 г (12 ст. ложек с горкой)
+                        Масло растительное – для жарки
+                        Капуста тушёная – 100 г
+                        Сыр твёрдый – 100 г">Ingedients</button>
                     </div>
                     <div class="card-footer text-right text-light bg-dark">добавлено 12.10.2020</div>
                 </div>
             </div>
         </div>
     </div>
+
+
+
+
+    <div class="row justify-content-center my-5">
+        <button class="btn btn-primary" data-toggle="tooltip" data-placement="top" data-html="true" title="<h1>Чебуреки</h1>
+            Яйца – 3 шт.
+            Вода – 500 мл
+            Мука – 180 г (12 ст. ложек с горкой)
+            Масло растительное – для жарки
+            Капуста тушёная – 100 г
+            Сыр твёрдый – 100 г
+            ">Click me!</button>
+
+    </div>
+
+    <div class="row justify-content-center my-5">
+        <button class="btn btn-primary" title="header" data-toggle="popover" data-placement="top"
+            data-content="paragraph">Click
+            me!</button>
+    </div>
+
+    <div class="row justify-content-center my-5"><button class="btn btn-primary">lolè</button>
+    </div>
+
+
+    <div class="row justify-content-center">
+        <button class="btn btn-danger" data-toggle="collapse" data-target="#txt" aria-expanded="false"
+            aria-controls="txt">lolè</button>
+
+        <div class="collapse" id="txt">
+            <h1>I'm a title!</h1>
+            <p>I'm a text!</p>
+        </div>
+    </div>
+
 
 
 
