--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
                 <option value="https://sashapozharin.github.io">Александр Пожарин</option>
                 <option value="https://ucmit.github.io">Ulan</option>
                 <option value="https://hhamster39.github.io">Альбина</option>
+                <option value="https://artart241.github.io">Artem</option>
             </select>
 
             <button type="button" class="btn btn-danger ml-2" id="btnSelect">send request</button>
