--- a/index.html
+++ b/index.html
@@ -43,34 +43,39 @@
      -->
 
 
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-lg-start justify-content-center">
 
+        <a class="navbar-brand d-none d-md-inline" href="#">ArtART Photography</a>
 
+        <a class="navbar-brand d-none d-md-inline" href="#"><img src="img/AGLogo.png" width="50px" alt="lol"></a>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">ArtART Photography</a>
-        <a href="#" class="navbar-brand"><img src="img/AGLogo.png" width="50px" alt="lol"></a>
+        <a role="button" class="navbar-brand d-inline d-md-none" data-toggle="collapse" data-target="#navigation"
+            aria-expanded="false" aria-controls="navigation"><img src="img/AGLogo.png" width="50px" alt="lol"></a>
 
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Repository</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Google</a></li>
+        <div class="collapse navbar-collapse text-center" id="navigation">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                <li class="nav-item"><a target="_blank" class="nav-link" href="https://www.github.com/artart241">Repository</a></li>
+                <li class="nav-item"><a target="_blank" class="nav-link" href="https://www.google.com/">Google</a></li>
 
-            <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" id="toggler" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">Games</a>
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" id="toggler" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">Games</a>
 
-                <div class="dropdown-menu" aria-labelledby="toggler">
-                    <a href="#" class="dropdown-item">Counter Strike: Global Offensive</a>
-                    <a href="#" class="dropdown-item">Minecraft</a>
-                    <a href="#" class="dropdown-item">Battlefield V</a>
-                </div>
-            </li>
-        </ul>
-
+                    <div class="dropdown-menu" aria-labelledby="toggler">
+                        <a href="#" class="dropdown-item">Counter Strike: Global Offensive</a>
+                        <a href="#" class="dropdown-item">Minecraft</a>
+                        <a href="#" class="dropdown-item">Battlefield V</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
 
 
     </nav>
 
+    <!-- Carousel -->
     <div class="container-fluid d-flex justify-content-center">
         <div class="carousel slide" id="banner" data-ride="carousel">
             <div class="carousel-inner">
@@ -113,6 +118,7 @@
         </div>
     </div>
 
+    <!-- Spinner -->
     <div class="container-fluid d-flex justify-content-center border-top border-bottom border-danger rounded">
         <div class="row">
             <div class="spinner-border text-primary"></div>
@@ -139,6 +145,7 @@
 
     </div>
 
+    <!-- cards -->
     <div class="container-md">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
             <div class="col">
@@ -316,32 +323,7 @@
         </div>
     </div>
 
-
-
-
-    <div class="row justify-content-center my-5">
-        <button class="btn btn-primary" data-toggle="tooltip" data-placement="top" data-html="true" title="<h1>Чебуреки</h1>
-            Яйца – 3 шт.
-            Вода – 500 мл
-            Мука – 180 г (12 ст. ложек с горкой)
-            Масло растительное – для жарки
-            Капуста тушёная – 100 г
-            Сыр твёрдый – 100 г
-            ">Click me!</button>
-
-    </div>
-
-    <div class="row justify-content-center my-5">
-        <button class="btn btn-primary" title="header" data-toggle="popover" data-placement="top"
-            data-content="paragraph">Click
-            me!</button>
-    </div>
-
-    <div class="row justify-content-center my-5"><button class="btn btn-primary">lolè</button>
-    </div>
-
-
-
+    <!-- Messages from others -->
     <div class="row justify-content-center my-5">
         <form class="form-inline">
             <select class="custom-select">
@@ -363,18 +345,19 @@
     </div>
 
 
-
-    <div class="modal fade" id="msgBox" data-keyboard="false" data-backdrop="static"
-    tabindex="-1" aria-hidden="true" aria-labelledby="msgLabel">
+    <!-- Message box -->
+    <div class="modal fade" id="msgBox" data-keyboard="false" data-backdrop="static" tabindex="-1" aria-hidden="true"
+        aria-labelledby="msgLabel">
         <div class="modal-dialog">
             <div class="modal-content">
 
                 <div class="modal-header">
-                    <h4 class="modal-title" id="msgLabel">Message from </h4>
+                    <h4 class="modal-title" id="msgLabel">
+                    </h4>
                 </div>
 
                 <div class="modal-body">
-                  
+
                 </div>
 
                 <div class="modal-footer">
@@ -385,10 +368,8 @@
         </div>
     </div>
 
-    <div class="row justify-content-center">
-        <button class="btn btn-primary" data-toggle="modal" data-target="#msgBox">Call window</button>
-    </div>
 
+    <!-- my own Msg answer -->
     <div id="answer">
         <h1>Hello, folks!</h1>
         <p>That's a message!</p>
@@ -402,6 +383,7 @@
 
 
 
+    <!-- jQuery, popper.js, bootstrap, script.js -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
