--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
         </div>
     </div>
 
+    <br>
     <!-- Spinner -->
-    <div class="container-fluid d-flex justify-content-center border-top border-bottom border-danger rounded">
+    <div class="d-none">
+      <div class="container-fluid d-flex justify-content-center border-top border-bottom border-danger rounded">
         <div class="row">
             <div class="spinner-border text-primary"></div>
             <div class="spinner-border text-secondary"></div>
@@ -143,7 +145,9 @@
         <div class="bg-success rounded-circle" style="width: 45px; height: 35px;"></div>
         <div class="bg-success rounded-pill text-center" style="width: 100px; height: 35px;">button</div>
 
+    </div>  
     </div>
+    
 
     <!-- cards -->
     <div class="container-md">
